# betterhook

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml  release-plz.toml  release.toml  renovate.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
apps/betterhook/: Cargo.toml  package.json
apps/betterhook/afl/: Cargo.toml  README.md
apps/betterhook/afl/seeds/cache_key/: multi  single
apps/betterhook/afl/seeds/clippy_parser/: artifact.json  warning.json
apps/betterhook/afl/seeds/config_parse/: minimal.toml  monorepo.toml  with_caps.toml
apps/betterhook/afl/seeds/dag_resolver/: conflict.toml  single.toml
apps/betterhook/afl/seeds/eslint_parser/: report.json
apps/betterhook/afl/seeds/husky_importer/: lint_staged.sh
apps/betterhook/benches/: config_parse.rs  output_multiplexer.rs
apps/betterhook/fuzz/: Cargo.toml  README.md
apps/betterhook/fuzz/fuzz_targets/: config_parse.rs  wrapper_paths.rs
apps/betterhook/src/: dispatch.rs  error.rs  fuzz_harnesses.rs  lib.rs  status.rs  test_support.rs
apps/betterhook/src/builtins/: biome.rs  black.rs  clippy.rs  common.rs  eslint.rs  gitleaks.rs  gofmt.rs  govet.rs  mod.rs  oxlint.rs  prettier.rs  ruff.rs  rustfmt.rs  shellcheck.rs
apps/betterhook/src/cache/: hash.rs  lookup.rs  mod.rs  store.rs  tool_hash.rs
apps/betterhook/src/config/: extends.rs  kdl.rs  migrate.rs  mod.rs  parse.rs  schema.rs
apps/betterhook/src/config/import/: hk.rs  husky.rs  lefthook.rs  mod.rs  pre_commit.rs
apps/betterhook/src/config/snapshots/: betterhook__config__kdl__tests__parsed_config_from_kdl.snap  betterhook__config__parse__tests__parsed_config_from_toml.snap
apps/betterhook/src/daemon/: lifecycle.rs  mod.rs  registry.rs  server.rs  speculative.rs  watcher.rs
apps/betterhook/src/git/: fileset.rs  mod.rs  rev_parse.rs  stash.rs
apps/betterhook/src/install/: manifest.rs  mod.rs  wrapper.rs
apps/betterhook/src/lock/: client.rs  flock.rs  mod.rs  protocol.rs
apps/betterhook/src/runner/: dag.rs  diagnostics.rs  executor.rs  glob_util.rs  mod.rs  output.rs  plan.rs  proc.rs  stage.rs
apps/betterhook/tests/: adversarial.rs  builtin_tests.rs  cache_tests.rs  config_tests.rs  daemon.rs  dag_tests.rs  end_to_end.rs  git_tests.rs  install_tests.rs  lock_tests.rs  registry_tests.rs  runner_tests.rs  speculative_tests.rs  watcher_tests.rs  worktree.rs
apps/betterhook/tests/common/: mod.rs
apps/cli/: CHANGELOG.md  Cargo.toml  package.json
apps/cli/src/: exit_codes.rs  main.rs
apps/cli/src/commands/: builtins.rs  cache.rs  completions.rs  dispatch.rs  doctor.rs  explain.rs  fix.rs  import.rs  init.rs  install.rs  migrate.rs  mod.rs  run.rs  serve.rs  status.rs  uninstall.rs
apps/docs/: README.md  changelog.mdx  docs.json  introduction.mdx  llms.txt  package.json  quickstart.mdx  why-betterhook.mdx
apps/docs/agents/: conductor.mdx  ndjson.mdx  overview.mdx  self-correction.mdx
apps/docs/architecture/: cache.mdx  capability-dag.mdx  daemon.mdx  overview.mdx  runner.mdx  speculative.mdx  worktree-model.mdx
apps/docs/commands/: builtins.mdx  cache.mdx  completions.mdx  doctor.mdx  explain.mdx  fix.mdx  import.mdx  init.mdx  install.mdx  migrate.mdx  overview.mdx  run.mdx  status.mdx  uninstall.mdx
apps/docs/essentials/: configuration.mdx  extends.mdx  formats.mdx  installation.mdx  isolation.mdx  monorepo.mdx  templates.mdx
apps/docs/migration/: from-husky.mdx  from-lefthook.mdx  from-pre-commit.mdx
apps/docs/reference/: env-vars.mdx  exit-codes.mdx  ndjson.mdx  performance.mdx  protocol.mdx
docs/: bench-results.md  protocol.md
docs/launch/: demo-script.md  hn-post.md
docs/superpowers/specs/: 2026-04-18-repo-cleanup-design.md
man/: betterhook.1
packaging/homebrew/: betterhook.rb
packaging/npm/: README.md  install.js  package.json
recipes/: README.md  go.toml  polyglot.toml  python.toml  rust.toml  typescript.toml
xtask/: Cargo.toml
xtask/src/: bench_monorepo.rs  fuzz.rs  fuzz_smoke.rs  main.rs  stress.rs
