[package]
name = "betterhook"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Memory-efficient, worktree-native git hooks manager built for the AI agent era."

[lib]
name = "betterhook"
path = "src/lib.rs"

[[bin]]
name = "betterhookd"
path = "src/bin/betterhookd.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml_ng = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
humantime = { workspace = true }
globset = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
