[package]
name = "betterhook"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Memory-efficient, worktree-native git hooks manager built for the AI agent era."

[lib]
name = "betterhook"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml_ng = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
humantime = { workspace = true }
globset = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
which = { workspace = true }
notify = { workspace = true }
tempfile = { workspace = true }
owo-colors = { workspace = true }
humantime-serde = { workspace = true }
tokio-util = { workspace = true }
bincode = { workspace = true }
futures = "0.3"
bytes = "1"
fs4 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
futures = "0.3"
bytes = "1"
tokio-util = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "config_parse"
harness = false

[[bench]]
name = "output_multiplexer"
harness = false

[lints]
workspace = true
