[package]
name = "betterhook-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Fast, worktree-native git hooks manager for parallel AI agents."
homepage = "https://github.com/leonardomso/betterhook"
documentation = "https://github.com/leonardomso/betterhook"
keywords = ["git", "hooks", "worktree", "cli", "linter"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "betterhook"
path = "src/main.rs"

[dependencies]
betterhook = { path = "../betterhook", version = "0.1.1" }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
